--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -12,6 +12,8 @@
     "build-story": "storybook build"
   },
   "dependencies": {
+    "@ignite-ui/react": "*",
+    "@ignite-ui/tokens": "*",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
